Add nav styles and react component

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <title>Hiram Ambriz</title>
     </head>
     <body>
-        <!--
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
-        -->
+
+        <!--
         <nav>
             <ul>
                 <li><a href="/">Hiram Ambriz</a></li>
@@ -20,6 +20,7 @@
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
+        -->
         <header>
             <p>
                 Software Engineer / Full Stack Developer / Web Developer / PHP
@@ -32,7 +33,7 @@
                 <h2>Experience</h2>
                 <p>Years of Experience - 2 years</p>
                 <section>
-                    <img src=" alt="Company Name">
+                    <img src="" alt="Company Name" />
                     <h3>Company Name</h3>
                     <p>My role here</p>
                     <a href="https://www.example.com">Company Website</a>
