--- a/index.html
+++ b/index.html
@@ -5,30 +5,47 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hiram Ambriz</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
-
-        <!--
-        <nav>
-            <ul>
-                <li><a href="/">Hiram Ambriz</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/resume">Resume</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </nav>
-        -->
-        <header>
-            <p>
-                Software Engineer / Full Stack Developer / Web Developer / PHP
-                Developer / Laravel Developer / Software Developer
-            </p>
-            <h1>Hi, this is Hiram Ambriz.</h1>
-        </header>
         <main>
+            <article>
+                <h2>Experience</h2>
+                <p>Years of Experience - 2 years</p>
+                <section>
+                    <img src="" alt="Company Name" />
+                    <h3>Company Name</h3>
+                    <p>My role here</p>
+                    <a href="https://www.example.com">Company Website</a>
+                </section>
+            </article>
+            <article>
+                <h2>Experience</h2>
+                <p>Years of Experience - 2 years</p>
+                <section>
+                    <img src="" alt="Company Name" />
+                    <h3>Company Name</h3>
+                    <p>My role here</p>
+                    <a href="https://www.example.com">Company Website</a>
+                </section>
+            </article>
+            <article>
+                <h2>Experience</h2>
+                <p>Years of Experience - 2 years</p>
+                <section>
+                    <img src="" alt="Company Name" />
+                    <h3>Company Name</h3>
+                    <p>My role here</p>
+                    <a href="https://www.example.com">Company Website</a>
+                </section>
+            </article>
             <article>
                 <h2>Experience</h2>
                 <p>Years of Experience - 2 years</p>
